convertedToMDAPI/objects/Case.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>ADF_Approved_Date__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>ADF Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADF_Rejected_Date__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>ADF Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADF_Status_Flag__c</fullName>
        <formula>IMAGE( 
CASE(  ADF_Status__c , 
&quot;Approved&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Draft&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Submitted&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Rejected&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;Cancelled&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Status Flag&quot;)</formula>
        <label>ADF Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADF_Status__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <label>ADF Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADF_Submitted_Date__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>ADF Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApheresisCenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apheresis Center</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>CasesApheresisCenter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApheresisDatePlanned__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Apheresis Date Planned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApheresisEndLatest__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Apheresis End Latest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApheresisPickupPlanned__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Apheresis Pickup Planned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApheresisStartEarliest__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Apheresis Start Earliest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CM_OperationalFunction__c</fullName>
        <description>3rd Level Case Management</description>
        <label>Case Mgt: Operational Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CM_ServiceModule__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A1. Capture Site Certification Data (Site Set-Up)</fullName>
                </value>
                <value>
                    <fullName>A2. Triage Site/HCP Certification Data</fullName>
                </value>
                <value>
                    <fullName>A3. Confirm Certified Site Set-Up</fullName>
                </value>
                <value>
                    <fullName>A4. Update Site Certification Data (Ongoing Management)</fullName>
                </value>
                <value>
                    <fullName>B1. Receive Product Request</fullName>
                </value>
                <value>
                    <fullName>B2. Reserve an Allocated Plant Appointment (PA)</fullName>
                </value>
                <value>
                    <fullName>B3. Associate Patient with Allocated PA</fullName>
                </value>
                <value>
                    <fullName>B4. Facilitate Second-Person Product Request Review</fullName>
                </value>
                <value>
                    <fullName>B5. Forward Product Ordering Data</fullName>
                </value>
                <value>
                    <fullName>C1. Respond to Aph PO Related Inquiries</fullName>
                </value>
                <value>
                    <fullName>C2. Communicate Aph Transportation Status</fullName>
                </value>
                <value>
                    <fullName>D1. Communicate Order Status/Batch ID</fullName>
                </value>
                <value>
                    <fullName>D2. Communicate Kymriah Transportation Status</fullName>
                </value>
                <value>
                    <fullName>E1. Communicate Rescheduling Request</fullName>
                </value>
                <value>
                    <fullName>E2. Receive Cancellation Request</fullName>
                </value>
                <value>
                    <fullName>E3. Triage Cancellation Request</fullName>
                </value>
                <value>
                    <fullName>E4. Receive Finished Product Return Request</fullName>
                </value>
                <value>
                    <fullName>E5. Triage Finished Product Return Request</fullName>
                </value>
                <value>
                    <fullName>E6. Communicate Replacement Product Delivery Request</fullName>
                </value>
                <value>
                    <fullName>A1. Respond to Post-Certification Inquiries</fullName>
                </value>
                <value>
                    <fullName>A2. Respond to User Registration Inquiries</fullName>
                </value>
                <value>
                    <fullName>A3. Provide Certification Training Materials</fullName>
                </value>
                <value>
                    <fullName>B1. Respond to Lead-Time Inquiries</fullName>
                </value>
                <value>
                    <fullName>B2. Respond to Order Process Inquiries</fullName>
                </value>
                <value>
                    <fullName>B3. Respond to System/Platform Related Issues</fullName>
                </value>
                <value>
                    <fullName>B4. Respond to Aph/Cryo Logistics &amp; Transportation Inquiries</fullName>
                </value>
                <value>
                    <fullName>B5. Respond to Return/Cancellation Inquiries</fullName>
                </value>
                <value>
                    <fullName>C1. Respond to Aph/Cryo Product Inquiries</fullName>
                </value>
                <value>
                    <fullName>C2. Respond to Patient Treatment Related Inquiries</fullName>
                </value>
                <value>
                    <fullName>C3. Respond to Kymriah Related Inquiries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_ServiceModule__c</fullName>
        <description>2nd level Case Management</description>
        <label>Case Mgt: Service Module</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CM_SupportArea__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site Data Management</fullName>
                </value>
                <value>
                    <fullName>Product Request Processing</fullName>
                </value>
                <value>
                    <fullName>Aph Tracking</fullName>
                </value>
                <value>
                    <fullName>Cell Processing Surveillance</fullName>
                </value>
                <value>
                    <fullName>Return, Cancellation &amp; Rescheduling</fullName>
                </value>
                <value>
                    <fullName>Certification Follow-Up/FAQ</fullName>
                </value>
                <value>
                    <fullName>General Order Process Queries</fullName>
                </value>
                <value>
                    <fullName>Medical Information Support</fullName>
                </value>
                <value>
                    <fullName>Coverage Approval Support</fullName>
                </value>
                <value>
                    <fullName>Network Investigation</fullName>
                </value>
                <value>
                    <fullName>Education/Info Resources</fullName>
                </value>
                <value>
                    <fullName>Financial Support</fullName>
                </value>
                <value>
                    <fullName>Travel Assistance</fullName>
                </value>
                <value>
                    <fullName>Non-Certified Site/HCP Certification Inquiries</fullName>
                </value>
                <value>
                    <fullName>Certified Site &amp; HCP Information</fullName>
                </value>
                <value>
                    <fullName>Long-Term Patient Follow-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_SupportArea__c</fullName>
        <description>1st level Case Management</description>
        <label>Case Mgt: Support Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Management</fullName>
                    <label>I Order Management</label>
                </value>
                <value>
                    <fullName>Certified Site / HCP Services</fullName>
                    <label>II Certified Site / HCP Services</label>
                </value>
                <value>
                    <fullName>Patient Services</fullName>
                    <label>III Patient Services</label>
                </value>
                <value>
                    <fullName>Referring Site Services</fullName>
                    <label>IV Referring Site Services</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupBatchNumber__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Group Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCertifiedSite__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Certified Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>linkes the patient ID and not a name to the treatment case</description>
        <inlineHelpText>type &quot;ID&quot; for lookup search</inlineHelpText>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PickupCourierNumber__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Pickup Courier #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRFApprovedDate__c</fullName>
        <inlineHelpText>Product Request Approved Date/Time</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Product Request Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRFSubmittedDate__c</fullName>
        <inlineHelpText>Product Request Submitted Date/Time</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Product Request Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRF_RejectedDate__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Product Request Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRF_StatusFlag__c</fullName>
        <formula>IMAGE( 
CASE(  PRF_Status__c , 
&quot;Approved&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Draft&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Submitted&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Rejected&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;Cancelled&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Status Flag&quot;)</formula>
        <label>PRF Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRF_Status__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <label>PRF Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessOrderPrimary__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Process Order Primary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purpose</label>
        <referenceTo>Purpose__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrderNumber__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Sales Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Site)</relationshipLabel>
        <relationshipName>CasesSite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusGlobal__c</fullName>
        <formula>TEXT(Status)&amp;&#39; / &#39;&amp;
CASE(TEXT(Status)
, &#39;New&#39;, TEXT(PRF_Status__c)
, &#39;Plant Appointment&#39;, TEXT( Status_Plant_Appointment__c)
, &#39;Apheresis Pickup&#39;, TEXT( Status_Apheresis_Pickup__c )
, &#39;Apheresis Procedure&#39;, TEXT( Status_Apheresis_Procedure__c )
, &#39;Cell Processing&#39;,  TEXT(Status_Cell_Processing__c)
, &#39;Finished Material Delivery&#39;,  TEXT(Status_Finished_Product_Delivery__c)
, &#39;Infusion&#39;, TEXT( Status_Overall_Infusion__c)
, &#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Global</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Apheresis_Pickup__c</fullName>
        <label>Status - Apheresis Pickup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apheresis - Waiting Confirmation</fullName>
                    <default>true</default>
                    <label>Apheresis - Waiting Confirmation</label>
                </value>
                <value>
                    <fullName>Apheresis - Planned Pickup</fullName>
                </value>
                <value>
                    <fullName>Apheresis Material - Goods Received</fullName>
                </value>
                <value>
                    <fullName>Apheresis Material - Goods Receipt Reversed</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Picked up</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Pickup Cancelled</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Batch Released</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Batch Release Reversed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Apheresis_Procedure__c</fullName>
        <label>Status - Apheresis Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apheresis - To be confirmed</fullName>
                    <default>true</default>
                    <label>Apheresis - To be confirmed</label>
                </value>
                <value>
                    <fullName>Apheresis - Completed</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Interrupted</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Cell_Processing__c</fullName>
        <label>Status - Cell Processing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cell Processing - Waiting Confirmation</fullName>
                    <default>true</default>
                    <label>Cell Processing - Waiting Confirmation</label>
                </value>
                <value>
                    <fullName>Cell Processing - Planned</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Started</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Start Reversed</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Completed</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Completion Reversed</fullName>
                </value>
                <value>
                    <fullName>Primary Product - QA Released</fullName>
                </value>
                <value>
                    <fullName>Primary Product - QA Release Reversed</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Finished_Product_Delivery__c</fullName>
        <label>Status - Finished Product Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finished Product Delivery - Waiting Confirmation</fullName>
                    <default>true</default>
                    <label>Finished Product Delivery - Waiting Confirmation</label>
                </value>
                <value>
                    <fullName>Finished Product Delivery - Planned</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Released from Manufacturing Plant</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Released from Manufacturing Plant Reversed</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Shipped from Manufacturing Plant</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Shipped from Manufacturing Plant Reversed</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Received</fullName>
                </value>
                <value>
                    <fullName>Finished Product Delivery - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Released by Novartis</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Released by Novartis Reversed</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Shipped to Treatment Center</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Shipped to Treatment Center Reversed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Overall_Infusion__c</fullName>
        <label>Status - Overall Infusion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Infusion - Not Started</fullName>
                    <default>true</default>
                    <label>Infusion - Not Started</label>
                </value>
                <value>
                    <fullName>Infusion - In Progress</fullName>
                </value>
                <value>
                    <fullName>Infusion - Completed</fullName>
                </value>
                <value>
                    <fullName>Infusion - Interrupted</fullName>
                </value>
                <value>
                    <fullName>Infusion - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Overall_Treatment__c</fullName>
        <label>Status - Overall Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Plant_Appointment__c</fullName>
        <inlineHelpText>Current Status of the plant appointment</inlineHelpText>
        <label>Status - Plant Appointment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Allocated - Waiting Confirmation</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Reserved - Waiting Confirmation</fullName>
                </value>
                <value>
                    <fullName>Reserved - Rejected</fullName>
                </value>
                <value>
                    <fullName>Reserved - Approved</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TreatmentKey__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique Key of the treatment</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Treatment Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <businessProcesses>
        <fullName>PatientServices</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Program %28Enrollment%29</fullName>
        <description>Overall Process of Program Progress</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Treatment</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Apheresis</fullName>
        </values>
        <values>
            <fullName>Cell Process</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Finished Material Delivery</fullName>
        </values>
        <values>
            <fullName>Infusion</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pickup</fullName>
        </values>
        <values>
            <fullName>Plant Appointment</fullName>
        </values>
    </businessProcesses>
    <recordTypes>
        <fullName>Enrollment</fullName>
        <active>true</active>
        <businessProcess>Program %28Enrollment%29</businessProcess>
        <description>Used as Parent Case for the Treatments</description>
        <label>Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>OBC</fullName>
        <active>true</active>
        <businessProcess>Program %28Enrollment%29</businessProcess>
        <description>Outcome Based Contract</description>
        <label>OBC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient_Services</fullName>
        <active>true</active>
        <businessProcess>PatientServices</businessProcess>
        <label>Kymriah Hub Services / Patient Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treatment</fullName>
        <active>true</active>
        <businessProcess>Treatment</businessProcess>
        <description>Used for the regular Treatments / holding the core PRF information</description>
        <label>Treatment</label>
    </recordTypes>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Patient_Services</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Patient_Services</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Completed</value>
        </filters>
        <label>All Open Patient Services</label>
    </listViews>
    <listViews>
        <fullName>All_with_Recordtype</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All with Recordtype</label>
    </listViews>
    <listViews>
        <fullName>ApproverQueueADF_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Approver Queue ADF</label>
        <queue>ApproverQueueADF</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ApproverQueuePRF_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Approver Queue PRF</label>
        <queue>ApproverQueuePRF</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUKymrah_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>EU - Kymriah</label>
        <queue>EUKymrah</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>USKymrah_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Kymriah</label>
        <queue>USKymrah</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>US_Patient_Services_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Patient Services</label>
        <queue>US_Patient_Services</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
</CustomObject>